--- a/html/Register.html
+++ b/html/Register.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" Content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Groupie Tracker </title>
-    <link rel="stylesheet" href="../static/login.css">
+    <link rel="stylesheet" href="../static/css/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -27,8 +27,22 @@
 
             <div class="input-box">
                 <input id="password" name="password" type="password" placeholder="Mot de passe" required>
+                <i class="bx bx-show" id="showPasswordIcon1" style="margin-right: 25px; cursor: pointer;"></i> 
+                <i class='bx bx-hide' id="hidePasswordIcon1" style="margin-right: 25px; cursor: pointer; display: none;"></i>
                 <i class='bx bxs-lock-alt' ></i>
             </div>
+
+            <div class="input-box">
+                <input id="confirmPassword" name="confirmPassword" type="password" placeholder="Confirmation du mot de passe" required>
+                <i class="bx bx-show" id="showPasswordIcon2" style="margin-right: 25px; cursor: pointer;"></i> 
+                <i class='bx bx-hide' id="hidePasswordIcon2" style="margin-right: 25px; cursor: pointer; display: none;"></i>
+                <i class='bx bxs-lock-alt' ></i>
+            </div>
+
+            {{if .ErrorMessage}}
+            <p style="color: red; text-align: center; margin-bottom: 10px;">{{.ErrorMessage}}</p>
+            {{end}}
+
 
             <button type="submit" class="btn">Créer mon compte</button>
 
@@ -38,5 +52,7 @@
         </form>
     </div>
 </body>
+
+<script src="../static/js/showPassword.js"></script>
 
 </html>
