--- a/html/AccountRecovery.html
+++ b/html/AccountRecovery.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="wrapper">
-        <form id="loginForm" action="/Home" method="POST">
+        <form id="loginForm" action="/AccountRecoveryHandler" method="POST">
             <h1>Retrouvez</h1>
             <h1>votre compte</h1>
 
@@ -22,7 +22,7 @@
             </div>
 
             {{if .ErrorMessage}}
-            <p style="color: red;">{{.ErrorMessage}}</p>
+            <p style="color: red; text-align: center; margin-bottom: 10px;">{{.ErrorMessage}}</p>
             {{end}}
 
             <button type="sumbit" class="btn">Valider</button>
