--- a/html/Login.html
+++ b/html/Login.html
@@ -31,7 +31,7 @@
                     <a href="/PasswordForgotten">Mot de passe oublié</a>
                 </div>
                 {{if .ErrorMessage}}
-                <p style="color: rgb(255, 24, 24); text-align: center; margin-bottom: 10px;">{{.ErrorMessage}}</p>
+                <p style="color: red; text-align: center; margin-bottom: 10px;">{{.ErrorMessage}}</p>
                 {{end}}
 
                 <button type="sumbit" class="btn">Se connecter</button>
