--- a/html/PasswordForgotten.html
+++ b/html/PasswordForgotten.html
@@ -22,7 +22,7 @@
             </div>
 
             {{if .ErrorMessage}}
-            <p style="color: red;">{{.ErrorMessage}}</p>
+            <p style="color: red; text-align: center; margin-bottom: 10px;">{{.ErrorMessage}}</p>
             {{end}}
 
             <button type="sumbit" class="btn">Envoyer un mail de récupération</button>
