--- a/html/Home.html
+++ b/html/Home.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/home.css">
+    <link rel="stylesheet" href="/static/css/home.css">
     <meta charset="UTF-8">
     <title>Groupie-Tracker</title>
 </head>
@@ -21,21 +21,21 @@
     </div>
     <h1 id="h1"> bienvenue dans Groupie-Tracker</h1>
     <div class="container">
-        <img class="my-disk" id="disk" src="../static/img/Disque.png" height="150px" width="150px" alt="Image">
+        <img class="my-disk" id="disk" src="/static/img/Disque.png" height="150px" width="150px" alt="Image">
     </div>
 
     <div class="sidebar expanded" id="sidebar expanded">
         <button class="dropdown-btn" id="dropdown-btn">Menu</button>
         <div class="dropdown-container">
         </div>
-        <img class="icone" src="../static/img/homme.png" alt="Image" height="30px" width="30px">
-        <img class="icone-2"  id="croissant" src="../static/img/Croissant.png" alt="Image" height="30px" width="30px">
+        <img class="icone" src="/static/img/homme.png" alt="Image" height="30px" width="30px">
+        <img class="icone-2"  id="croissant" src="/static/img/Croissant.png" alt="Image" height="30px" width="30px">
     </div>
 
     <div id="artiste-example"></div>
 
 </body>
 
-<script src="../static/js/home.js"></script>
+<script src="/static/js/home.js"></script>
 
 </html>
