--- a/html/Register.html
+++ b/html/Register.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" Content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Groupie Tracker </title>
-    <link rel="stylesheet" href="../static/css/login.css">
+    <link rel="stylesheet" href="/static/css/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -53,6 +53,6 @@
     </div>
 </body>
 
-<script src="../static/js/showPassword.js"></script>
+<script src="/static/js/showPassword.js"></script>
 
 </html>
