--- a/html/Login.html
+++ b/html/Login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" Content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Groupie Tracker </title>
-    <link rel="stylesheet" href="../static/css/login.css">
+    <link rel="stylesheet" href="/static/css/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head> 
 
@@ -34,7 +34,7 @@
                 <p style="color: red; text-align: center; margin-bottom: 10px;">{{.ErrorMessage}}</p>
                 {{end}}
 
-                <button type="sumbit" class="btn">Se connecter</button>
+                <button type="submit" class="btn">Se connecter</button>
 
                 <div class="register-link">
                     <p> Vous n'avez pas de compte ? <a href="/Register">S'enregister</a> </p>
@@ -43,6 +43,6 @@
     </div>
 </body>
 
-<script src="../static/js/showPassword.js"></script>
+<script src="/static/js/showPassword.js"></script>
     
 </html>
