--- a/html/ResetPassword.html
+++ b/html/ResetPassword.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" Content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Groupie Tracker </title>
-    <link rel="stylesheet" href="../static/css/login.css">
+    <link rel="stylesheet" href="/static/css/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -34,11 +34,11 @@
             <p style="color: red; text-align: center; margin-bottom: 10px;">{{.ErrorMessage}}</p>
             {{end}}
 
-            <button type="sumbit" class="btn">Valider</button>
+            <button type="submit" class="btn">Valider</button>
         </form>
     </div>
 </body>
 
-<script src="../static/js/showPassword.js"></script>
+<script src="/static/js/showPassword.js"></script>
     
 </html>
