preparing to merge

--- a/html/guessthesong/info.html
+++ b/html/guessthesong/info.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <link href="../static/info.css" rel="stylesheet">
+    <link href="/static/css/info.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Info Guess the song</title>
