--- a/html/guessthesong/lose.html
+++ b/html/guessthesong/lose.html
@@ -9,25 +9,23 @@
         rel="stylesheet">
     <meta charset="UTF-8">
     <title>guess the song Win</title>
-    <link rel="stylesheet" href="../static/win.css">
+    <link rel="stylesheet" href="/static/css/lose.css">
 </head>
 
 <body>
     <div class="title-top">
-        Congratulations You Win🎉
+        Oh no....😭😭😭
     </div>
 
     <div class="div-img">
-        <img class="imgGif" src="../images/Zlatan.gif" alt="image">
+        <img class="imgGif" src="/static/img/halloween.gif" alt="image">
     </div>
 
-    <form action="" method="post">
+    <form action="/lose"  method="post">
         <div class="div-btn">
-            <button class="myBtn" name="btnWin">Restart🔄</button>
+            <button class="myBtn" name="btnLose">Restart🔄</button>
         </div>
     </form>
-
-    <script type="module" src="../anim.js"></script>
 </body>
 
 </html>
