--- a/html/guessthesong/index.html
+++ b/html/guessthesong/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
 <body>
@@ -85,16 +85,5 @@
     </div>
    
 </body>
-<script>
-    function updateTimer() {
-        fetch('/timer')
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById('timer').innerText = data.time + "secondes";
-            });
-        console.log("refresh");
-    }
-    setInterval(updateTimer, 1000); 
-</script>
 
 </html>
