--- a/html/guessthesong/win.html
+++ b/html/guessthesong/win.html
@@ -9,23 +9,25 @@
         rel="stylesheet">
     <meta charset="UTF-8">
     <title>guess the song Win</title>
-    <link rel="stylesheet" href="../static/lose.css">
+    <link rel="stylesheet" href="/static/css/win.css">
 </head>
 
 <body>
     <div class="title-top">
-        Oh no....😭😭😭
+        Congratulations You Win🎉
     </div>
 
     <div class="div-img">
-        <img class="imgGif" src="../images/halloween.gif" alt="image">
+        <img class="imgGif" src="/static/img/Zlatan.gif" alt="image">
     </div>
 
-    <form action="/lose"  method="post">
+    <form action="" method="post">
         <div class="div-btn">
-            <button class="myBtn" name="btnLose">Restart🔄</button>
+            <button class="myBtn" name="btnWin">Restart🔄</button>
         </div>
     </form>
+
+    <script type="module" src="/static/js/anim.js"></script>
 </body>
 
 </html>
