corrected guess_the_song timer

--- a/html/BlindTest/index.html
+++ b/html/BlindTest/index.html
@@ -45,7 +45,7 @@
         </form>
     </div>
 
-    <script src="/static/js/timer.js"></script>
+    <script src="/static/js/blindTestTimer.js"></script>
 </body>
 
 </html>
