--- a/html/GuessTheSong/index.html
+++ b/html/GuessTheSong/index.html
@@ -51,7 +51,7 @@
                 <span class="wave"></span>
             </div>
 
-            <p id="timeRemaining">Il reste 10 secondes de musique </p>
+            <p id="timeRemaining">Il reste 20 secondes pour répondre</p>
 
             <form action="/" method="post">
                 <div class="inputResquest">
@@ -62,7 +62,7 @@
         </div>
     </div>
    
-    <script src="/static/js/timer.js"></script>
+    <script src="/static/js/guessTheSongTimer.js"></script>
 </body>
 
 </html>
