--- a/html/Home/Home.html
+++ b/html/Home/Home.html
@@ -27,7 +27,7 @@
     <div class="sidebar expanded" id="sidebar expanded">
         <button class="dropdown-btn" id="dropdown-btn">Menu</button>
         <div class="dropdown-container"></div>
-        <a href="/MyAccount"><img class="icone" src="/static/img/homme.png" alt="Image" height="30px" width="30px"></a>
+        <a href="/UserProfile"><img class="icone" src="/static/img/homme.png" alt="Image" height="30px" width="30px"></a>
         <img class="icone-2"  id="light mode" src="/static/img/Croissant.png" alt="Image" height="30px" width="30px">
     </div>
 
