--- a/html/Home/UserProfile.html
+++ b/html/Home/UserProfile.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link rel="stylesheet" href="/static/css/ProfilUser.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container light-style flex-grow-1 container-p-y">
+    <div class="container light-style flex-grow-1 container-p-y" id="infoContainer">
+
         <h4 class="font-weight-bold py-3 mb-4">
             Account settings
         </h4>
@@ -30,8 +31,8 @@
                     <div class="tab-content">
                         <div class="tab-pane fade active show" id="account-general">
                             <div class="card-body media align-items-center">
-                                <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnN6Y2p0dHpjZnZ5dXhiM3p0dHpwcGwxNmNyOGowNmQ0c3licWlkZCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/duf84Bx74ujSXvJs0I/giphy.webp" alt
-                                    class="d-block ui-w-80">
+                                <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnN6Y2p0dHpjZnZ5dXhiM3p0dHpwcGwxNmNyOGowNmQ0c3licWlkZCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/duf84Bx74ujSXvJs0I/giphy.webp"
+                                    alt class="d-block ui-w-80">
                                 <div class="media-body ml-4">
                                     <label class="btn btn-outline-primary">
                                         Upload new photo
@@ -99,7 +100,7 @@
                                     <label class="form-label">Country</label>
                                     <select class="custom-select">
                                         <option>USA</option>
-                                        <option >Canada</option>
+                                        <option>Canada</option>
                                         <option>UK</option>
                                         <option>Germany</option>
                                         <option selected>France</option>
@@ -120,23 +121,29 @@
                             </div>
                         </div>
 
+                    </div>
                 </div>
             </div>
+            <div class="text-right mt-3">
+                <button type="button" class="btn btn-primary">Save changes</button>&nbsp;
+                <button type="button" class="btn btn-default">Cancel</button>
+            </div>
         </div>
-        <div class="text-right mt-3">
-            <button type="button" class="btn btn-primary">Save changes</button>&nbsp;
-            <button type="button" class="btn btn-default">Cancel</button>
+
+
+        <div class="sidebar expanded" id="sidebar expanded">
+            <button class="dropdown-btn" id="dropdown-btn">Menu</button>
+            <div class="dropdown-container"></div>
+            <img class="icone-2" id="light mode" src="/static/img/Croissant.png" alt="Image" height="30px" width="30px">
         </div>
     </div>
+
+    <script type="module" src="/static/js/profil.js"></script>
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript">
+    <script type="text/javascript"></script>
 
-    </script>
 </body>
 
 </html>
-
-
-
