add cookie manage

--- a/html/BlindTest/LandingPage.html
+++ b/html/BlindTest/LandingPage.html
@@ -19,8 +19,8 @@
             <div class="deco-Img">    
         </div>
         <div class="RoomsButtons">
-            <a href="/Blindtest"><button class="RoomsButton">Créer un serveur privé</button></a>
-            <a href="/Blindtest"><button class="RoomsButton">Rejoindre un serveur privé</button></a>
+            <a href="/CreatePrivateBlindtest"><button class="RoomsButton">Créer un serveur privé</button></a>
+            <a href="/JoinPrivateBlindtest"><button class="RoomsButton">Rejoindre un serveur privé</button></a>
             <a href="/Blindtest"><button class="RoomsButton">Rejoindre le serveur public</button></a>
         </div>
     </div>
