display all in french

--- a/html/BlindTest/index.html
+++ b/html/BlindTest/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/blindtest.css">
+    <link rel="stylesheet" href="/static/css/BlindTest.css">
     <title>Blind Test</title>
 </head>
 
@@ -39,9 +39,9 @@
       
         <form action="/" method="post">
             <div class="inputContainer">
-                <input class="myInput" type="text" name="value" placeholder="Your response">
+                <input class="myInput" type="text" name="value" placeholder="Votre réponse">
             </div> 
-            <button  class="mybtn" type="submit">Send</button>
+            <button  class="mybtn" type="submit">Valider</button>
         </form>
     </div>
 
