--- a/html/GuessTheSong/index.html
+++ b/html/GuessTheSong/index.html
@@ -55,8 +55,8 @@
 
             <form action="/" method="post">
                 <div class="inputResquest">
-                    <input class="requestSong" type="text" placeholder="Music Name..." name="value" autocomplete="off">
-                    <button class="Mybtn" type="submit">Send</button>
+                    <input class="requestSong" type="text" placeholder="Votre réponse" name="value" autocomplete="off">
+                    <button class="Mybtn" type="submit">Valider</button>
                 </div>
             </form>
         </div>
