--- a/html/Home/UserProfile.html
+++ b/html/Home/UserProfile.html
@@ -20,11 +20,11 @@
                 <div class="col-md-3 pt-0">
                     <div class="list-group list-group-flush account-settings-links">
                         <a class="list-group-item list-group-item-action active" data-toggle="list"
-                            href="#account-general">General</a>
+                            href="#account-general">Général</a>
                         <a class="list-group-item list-group-item-action" data-toggle="list"
-                            href="#account-change-password">Change password</a>
+                            href="#account-change-password">Changer de mot de passe</a>
                         <a class="list-group-item list-group-item-action" data-toggle="list"
-                            href="#account-info">Info</a>
+                            href="#account-info">Informations</a>
                     </div>
                 </div>
                 <div class="col-md-9">
@@ -35,25 +35,21 @@
                                     alt class="d-block ui-w-80">
                                 <div class="media-body ml-4">
                                     <label class="btn btn-outline-primary">
-                                        Upload new photo
+                                        Nouvelle photo
                                         <input type="file" class="account-settings-fileinput">
                                     </label> &nbsp;
-                                    <button type="button" class="btn btn-default md-btn-flat">Reset</button>
-                                    <div class="text-light small mt-1">Allowed JPG, GIF or PNG. Max size of 800K</div>
+                                    <button type="button" class="btn btn-default md-btn-flat">Réinitialiser</button>
+                                    <div class="text-light small mt-1">JPG, GIF ou PNG uniquement.</div>
                                 </div>
                             </div>
 
                             <hr class="border-light m-0">
                             <div class="card-body">
                                 <div class="form-group">
-                                    <label class="form-label">Username</label>
+                                    <label class="form-label">Pseudo</label>
                                     {{if .Username}}
                                     <input type="text" class="form-control mb-1" value="{{.Username}}">
                                     {{end}}
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Name</label>
-                                    <input type="text" class="form-control" value="A ADMIN">
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label">E-mail</label>
@@ -61,12 +57,12 @@
                                     <input type="text" class="form-control mb-1" value="{{.Email}}">
                                     {{end}}
                                     <div class="alert alert-warning mt-3">
-                                        Your email is not confirmed. Please check your inbox.<br>
-                                        <a href="javascript:void(0)">Resend confirmation</a>
+                                        Votre email n'est pas confirmé. Veuillez vérifier vos mails. <br>
+                                        <a href="javascript:void(0)">Renvoyer une confirmation</a>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="form-label">Company</label>
+                                    <label class="form-label">Entreprise</label>
                                     <input type="text" class="form-control" value="Ynov lyon.">
                                 </div>
                             </div>
@@ -75,15 +71,15 @@
                         <div class="tab-pane fade" id="account-change-password">
                             <div class="card-body pb-2">
                                 <div class="form-group">
-                                    <label class="form-label">Current password</label>
+                                    <label class="form-label">Mot de passe actuel</label>
                                     <input type="password" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <label class="form-label">New password</label>
+                                    <label class="form-label">Nouveau mot de passe</label>
                                     <input type="password" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <label class="form-label">Repeat new password</label>
+                                    <label class="form-label">Confirmation du nouveau mot de passe</label>
                                     <input type="password" class="form-control">
                                 </div>
                             </div>
@@ -92,21 +88,21 @@
                         <div class="tab-pane fade" id="account-info">
                             <div class="card-body pb-2">
                                 <div class="form-group">
-                                    <label class="form-label">Bio</label>
+                                    <label class="form-label">Biographie</label>
                                     <textarea class="form-control"
-                                        rows="5">text.............................................................</textarea>
+                                        rows="5"></textarea>
                                 </div>
                                 <div class="form-group">
-                                    <label class="form-label">Birthday</label>
+                                    <label class="form-label">Date de naissance</label>
                                     <input type="text" class="form-control" value="00/00/0000">
                                 </div>
                                 <div class="form-group">
-                                    <label class="form-label">Country</label>
+                                    <label class="form-label">Pays</label>
                                     <select class="custom-select">
-                                        <option>USA</option>
+                                        <option>United States</option>
                                         <option>Canada</option>
-                                        <option>UK</option>
-                                        <option>Germany</option>
+                                        <option>United Kingdom</option>
+                                        <option>Deutschland</option>
                                         <option selected>France</option>
                                     </select>
                                 </div>
@@ -115,11 +111,11 @@
                             <div class="card-body pb-2">
                                 <h6 class="mb-4">Contacts</h6>
                                 <div class="form-group">
-                                    <label class="form-label">Phone</label>
+                                    <label class="form-label">Téléphone</label>
                                     <input type="text" class="form-control" value=" +33 755 14 24 255">
                                 </div>
                                 <div class="form-group">
-                                    <label class="form-label">Website</label>
+                                    <label class="form-label">Site Web</label>
                                     <input type="text" class="form-control" value>
                                 </div>
                             </div>
