--- a/html/BlindTest/index.html
+++ b/html/BlindTest/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/BlindTest.css">
+    <link rel="stylesheet" href="/static/css/blindTest.css">
     <title>Blind Test</title>
 </head>
 
