--- a/html/Home/UserProfile.html
+++ b/html/Home/UserProfile.html
@@ -5,135 +5,104 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel="stylesheet" href="/static/css/ProfilUser.css">
+    <link rel="stylesheet" href="/static/css/userProfil.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
     <div class="container light-style flex-grow-1 container-p-y" id="infoContainer">
 
         <h4 class="font-weight-bold py-3 mb-4">
-            Account settings
+            Paramètre du compte
         </h4>
         <div class="card overflow-hidden">
-            <div class="row no-gutters row-bordered row-border-light">
-                <div class="col-md-3 pt-0">
-                    <div class="list-group list-group-flush account-settings-links">
-                        <a class="list-group-item list-group-item-action active" data-toggle="list"
-                            href="#account-general">Général</a>
-                        <a class="list-group-item list-group-item-action" data-toggle="list"
-                            href="#account-change-password">Changer de mot de passe</a>
-                        <a class="list-group-item list-group-item-action" data-toggle="list"
-                            href="#account-info">Informations</a>
+            <form action="/UserProfileHandler" method="post" id="general-form">
+                <div class="row no-gutters row-bordered row-border-light">
+                    <div class="col-md-3 pt-0">
+                        <div class="list-group list-group-flush account-settings-links">
+                            <a class="list-group-item list-group-item-action active" data-toggle="list"
+                                href="#account-general">Général</a>
+                            <a class="list-group-item list-group-item-action" data-toggle="list"
+                                href="#account-change-password">Changer de mot de passe</a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-9">
-                    <div class="tab-content">
-                        <div class="tab-pane fade active show" id="account-general">
-                            <div class="card-body media align-items-center">
-                                <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnN6Y2p0dHpjZnZ5dXhiM3p0dHpwcGwxNmNyOGowNmQ0c3licWlkZCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/duf84Bx74ujSXvJs0I/giphy.webp"
-                                    alt class="d-block ui-w-80">
-                                <div class="media-body ml-4">
-                                    <label class="btn btn-outline-primary">
-                                        Nouvelle photo
-                                        <input type="file" class="account-settings-fileinput">
-                                    </label> &nbsp;
-                                    <button type="button" class="btn btn-default md-btn-flat">Réinitialiser</button>
-                                    <div class="text-light small mt-1">JPG, GIF ou PNG uniquement.</div>
-                                </div>
-                            </div>
-
-                            <hr class="border-light m-0">
-                            <div class="card-body">
-                                <div class="form-group">
-                                    <label class="form-label">Pseudo</label>
-                                    {{if .Username}}
-                                    <input type="text" class="form-control mb-1" value="{{.Username}}">
-                                    {{end}}
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">E-mail</label>
-                                    {{if .Email}}
-                                    <input type="text" class="form-control mb-1" value="{{.Email}}">
-                                    {{end}}
-                                    <div class="alert alert-warning mt-3">
-                                        Votre email n'est pas confirmé. Veuillez vérifier vos mails. <br>
-                                        <a href="javascript:void(0)">Renvoyer une confirmation</a>
+                    <div class="col-md-9">
+                        <div class="tab-content">
+                            <div class="tab-pane fade active show" id="account-general">
+                                <div class="card-body media align-items-center">
+                                    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnN6Y2p0dHpjZnZ5dXhiM3p0dHpwcGwxNmNyOGowNmQ0c3licWlkZCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/duf84Bx74ujSXvJs0I/giphy.webp"
+                                        alt class="d-block ui-w-80">
+                                    <div class="media-body ml-4">
+                                        <label class="btn btn-outline-primary">
+                                            Nouvelle photo
+                                            <input type="file" class="account-settings-fileinput">
+                                        </label> &nbsp;
+                                        <div class="text-light small mt-1">JPG, GIF ou PNG uniquement.</div>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label class="form-label">Entreprise</label>
-                                    <input type="text" class="form-control" value="Ynov lyon.">
+
+                                <hr class="border-light m-0">
+                                <div class="card-body">
+                                    <div class="form-group">
+                                        <label class="form-label">Pseudo</label>
+                                        {{if .Username}}
+                                        <input type="text" class="form-control mb-1" name="usernameInput" value="{{.Username}}">
+                                        {{end}}
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="form-label">E-mail</label>
+                                        {{if .Email}}
+                                        <input type="text" class="form-control mb-1" name="emailInput" value="{{.Email}}">
+                                        {{end}}
+                                        <div class="alert alert-warning mt-3">
+                                            Votre email n'est pas confirmé. Veuillez vérifier vos mails. <br>
+                                            <a href="javascript:void(0)">Renvoyer une confirmation</a>
+                                        </div>
+                                        {{if .ErrorMessage}}
+                                        <p style="color: red; text-align: center; margin-bottom: 10px;">{{.ErrorMessage}}</p>
+                                        {{end}}
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="tab-pane fade" id="account-change-password">
+                                <div class="card-body pb-2">
+                                    <div class="form-group">
+                                        <label class="form-label">Mot de passe actuel</label>
+                                        <input type="password" name="currentPasswordInput" id="currentPasswordInput" class="form-control">
+                                        <i class="bx bx-show" id="showPasswordIcon1" style="cursor: pointer;"></i> 
+                                        <i class='bx bx-hide' id="hidePasswordIcon1" style="cursor: pointer; display: none;"></i>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="form-label">Nouveau mot de passe</label>
+                                        <input type="password" name="newPasswordInput" id="newPasswordInput" class="form-control">
+                                        <i class="bx bx-show" id="showPasswordIcon2" style="cursor: pointer;"></i> 
+                                        <i class='bx bx-hide' id="hidePasswordIcon2" style="cursor: pointer; display: none;"></i>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="form-label">Confirmation du nouveau mot de passe</label>
+                                        <input type="password" name="confirmNewPasswordInput" id="confirmNewPasswordInput" class="form-control">
+                                        <i class="bx bx-show" id="showPasswordIcon3" style="cursor: pointer;"></i> 
+                                        <i class='bx bx-hide' id="hidePasswordIcon3" style="cursor: pointer; display: none;"></i>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="tab-pane fade" id="account-change-password">
-                            <div class="card-body pb-2">
-                                <div class="form-group">
-                                    <label class="form-label">Mot de passe actuel</label>
-                                    <input type="password" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Nouveau mot de passe</label>
-                                    <input type="password" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Confirmation du nouveau mot de passe</label>
-                                    <input type="password" class="form-control">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="tab-pane fade" id="account-info">
-                            <div class="card-body pb-2">
-                                <div class="form-group">
-                                    <label class="form-label">Biographie</label>
-                                    <textarea class="form-control"
-                                        rows="5"></textarea>
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Date de naissance</label>
-                                    <input type="text" class="form-control" value="00/00/0000">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Pays</label>
-                                    <select class="custom-select">
-                                        <option>United States</option>
-                                        <option>Canada</option>
-                                        <option>United Kingdom</option>
-                                        <option>Deutschland</option>
-                                        <option selected>France</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <hr class="border-light m-0">
-                            <div class="card-body pb-2">
-                                <h6 class="mb-4">Contacts</h6>
-                                <div class="form-group">
-                                    <label class="form-label">Téléphone</label>
-                                    <input type="text" class="form-control" value=" +33 755 14 24 255">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Site Web</label>
-                                    <input type="text" class="form-control" value>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
                 </div>
-            </div>
-            <div class="text-right mt-3">
-                <button type="button" class="btn btn-primary">Save changes</button>&nbsp;
-                <button type="button" class="btn btn-default">Cancel</button>
-            </div>
+                <div class="text-right mt-3">
+                    <a href="/UserProfileHandler"><button type="submit" class="btn btn-primary">Valider</button>&nbsp;</a>
+                    <a href="/Home"><button type="button" class="btn btn-default">Annuler</button></a>
+                </div>
+            </form>
         </div>
 
 
         <div class="sidebar expanded" id="sidebar expanded">
             <button class="dropdown-btn" id="dropdown-btn">Menu</button>
             <div class="dropdown-container"></div>
+            <a href="/Home"><img class="icone" src="/static/img/home.png" alt="Image" height="30px" width="30px"></a>
             <img class="icone-2" id="light mode" src="/static/img/Croissant.png" alt="Image" height="30px" width="30px">
         </div>
     </div>
@@ -143,6 +112,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript"></script>
+    <script src="/static/js/showPassword2.js"></script>
 
 </body>
 
