guess the song landing page

--- a/html/BlindTest/EndGame.html
+++ b/html/BlindTest/EndGame.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/blindtest.css">
-    <title>Blind Test</title>
+    <title>Groupie Tracker - Blind Test</title>
 </head>
 
 <body>
