--- a/html/GuessTheSong/Info.html
+++ b/html/GuessTheSong/Info.html
@@ -5,7 +5,7 @@
     <link href="/static/css/info.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Info Guess the song</title>
+    <title>Groupie Tracker - Guess the song</title>
 </head>
 
 <body>
