--- a/html/GuessTheSong/Win.html
+++ b/html/GuessTheSong/Win.html
@@ -8,24 +8,26 @@
         href="https://fonts.googleapis.com/css2?family=Cookie&family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Jersey+25&display=swap"
         rel="stylesheet">
     <meta charset="UTF-8">
-    <title>guess the song Win</title>
-    <link rel="stylesheet" href="/static/css/lose.css">
+    <title>Groupie Tracker - Guess the song</title>
+    <link rel="stylesheet" href="/static/css/win.css">
 </head>
 
 <body>
     <div class="title-top">
-        Oh no....😭😭😭
+        Congratulations You Win🎉
     </div>
 
     <div class="div-img">
-        <img class="imgGif" src="/static/img/halloween.gif" alt="image">
+        <img class="imgGif" src="/static/img/Zlatan.gif" alt="image">
     </div>
 
-    <form action="/lose"  method="post">
+    <form action="" method="post">
         <div class="div-btn">
-            <button class="myBtn" name="btnLose">Restart🔄</button>
+            <button class="myBtn" name="btnWin">Restart🔄</button>
         </div>
     </form>
+
+    <script type="module" src="/static/js/anim.js"></script>
 </body>
 
 </html>
