--- a/html/Home/Home.html
+++ b/html/Home/Home.html
@@ -7,15 +7,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/home.css">
     <meta charset="UTF-8">
-    <title>Groupie-Tracker</title>
+    <title>Groupie Tracker - Home</title>
 </head>
 
 <body>
     <div class="top-bar" id="top-bar">
         <div class="btn-containers">
-            <a href="/Blindtest"><button class="buttons"> Blind test </button></a>
-            <a href="/GuessTheSong"><button class="buttons"> Guess the song </button></a>
-            <a href="/Petitbac"><button class="buttons"> Petit bac </button></a>
+            <a href="/BlindtestLandingPage"><button class="buttons"> Blind test </button></a>
+            <a href="/GuessTheSongLandingPage"><button class="buttons"> Guess the song </button></a>
+            <a href="/PetitbacLandingPage"><button class="buttons"> Petit bac </button></a>
         </div>  
     </div>
     
