--- a/html/BlindTest/LandingPage.html
+++ b/html/BlindTest/LandingPage.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/blindtest.css">
-    <title>Blind Test</title>
+    <link rel="stylesheet" href="/static/css/blindTest.css">
+    <title>Groupie Tracker - Blind Test</title>
 </head>
 
 <body>
