--- a/html/BlindTest/LandingPage.html
+++ b/html/BlindTest/LandingPage.html
@@ -23,6 +23,7 @@
             <a href="/JoinPrivateBlindtest"><button class="RoomsButton">Rejoindre un serveur privé</button></a>
             <a href="/Blindtest"><button class="RoomsButton">Rejoindre le serveur public</button></a>
         </div>
+        <a href="/BlindtestRules"><button class="RulesButton">Règles</button></a>
     </div>
         
 </body>
