--- a/html/GuessTheSong/LandingPage.html
+++ b/html/GuessTheSong/LandingPage.html
@@ -24,6 +24,7 @@
             <a href="/JoinPrivateGuessTheSong"><button class="RoomsButton">Rejoindre un serveur privé</button></a>
             <a href="/GuessTheSong"><button class="RoomsButton">Rejoindre le serveur public</button></a>
         </div>
+        <a href="/GuessTheSongRules"><button class="RulesButton">Règles</button></a>
     </div>
         
 </body>
