--- a/html/GuessTheSong/Rules.html
+++ b/html/GuessTheSong/Rules.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <link href="/static/css/info.css" rel="stylesheet">
+    <link href="/static/css/guessTheSongRules.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groupie Tracker - Guess the song</title>
@@ -11,8 +11,8 @@
 <body>
         <h1 CLASS="title-top">Guess the Song🔈🔉🔊🎶</h1>
         <div class="container">
-                This game shows you an extract of the lyrics of a song, you must then find the
-                title of the original music.
+                Ce jeu vous montre un extrait des paroles d'une chanson, vous devez ensuite trouver le
+                titre de la musique originale.
                 Bon jeu❤😍
             <form action="/GuessTheSong" method="post">
                 <button class="MyBB" href="/" name="restart">Start</button>
