--- a/html/GuessTheSong/Win.html
+++ b/html/GuessTheSong/Win.html
@@ -9,7 +9,7 @@
         rel="stylesheet">
     <meta charset="UTF-8">
     <title>Groupie Tracker - Guess the song</title>
-    <link rel="stylesheet" href="/static/css/win.css">
+    <link rel="stylesheet" href="/static/css/guessTheSongWin.css">
 </head>
 
 <body>
