--- a/html/Home/UserProfile.html
+++ b/html/Home/UserProfile.html
@@ -13,10 +13,8 @@
 <body>
     <div class="container light-style flex-grow-1 container-p-y" id="infoContainer">
 
-        <h4 class="font-weight-bold py-3 mb-4">
-            Paramètre du compte
-        </h4>
-        <div class="card overflow-hidden">
+        <h4 class="font-weight-bold py-3 mb-4" id="title">Paramètre du compte</h4>
+        <div class="card overflow-hidden" id="box">
             <form action="/UserProfileHandler" method="post" id="general-form">
                 <div class="row no-gutters row-bordered row-border-light">
                     <div class="col-md-3 pt-0">
