--- a/html/GuessTheSong/Lose.html
+++ b/html/GuessTheSong/Lose.html
@@ -9,7 +9,7 @@
         rel="stylesheet">
     <meta charset="UTF-8">
     <title>Groupie Tracker - Guess the song</title>
-    <link rel="stylesheet" href="/static/css/lose.css">
+    <link rel="stylesheet" href="/static/css/guessTheSongLose.css">
 </head>
 
 <body>
