first version of petit bac

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 
 <body>
@@ -21,38 +21,38 @@
                 <div class="track-art"></div>
             </div>
 
-            <form action="" method="post">
+            <form action="" id="artiste" method="post">
                 <div class="wordsContainer">Artiste</div>
                 <div class="inputResquest">
-                    <input class="requestWords" type="text" placeholder="mots...." name="value" autocomplete="off">
+                    <input class="requestWords" type="text"  placeholder="mots...." name="value" autocomplete="off">
                 </div>
             </form>
 
-            <form action="" method="post">
+            <form action="" id="album" method="post">
                 <div class="wordsContainer">Album</div>
                 <div class="inputResquest">
-                    <input class="requestWords" type="text" placeholder="mots...." name="value" autocomplete="off">
+                    <input class="requestWords" type="text"  placeholder="mots...." name="value" autocomplete="off">
                 </div>
             </form>
 
-            <form action="" method="post">
+            <form action="" id="groupe" method="post">
                 <div class="wordsContainer">Groupe de musique</div>
                 <div class="inputResquest">
-                    <input class="requestWords" type="text" placeholder="mots...." name="value" autocomplete="off">
-                </div>
+                    <input class="requestWords" type="text"  placeholder="mots...." name="value" autocomplete="off">
+                </div> 
             </form>
 
-            <form action="" method="post">
+            <form action="" id="instrument" method="post">
                 <div class="wordsContainer">Instrument de musique</div>
                 <div class="inputResquest">
-                    <input class="requestWords" type="text" placeholder="mots...." name="value" autocomplete="off">
+                    <input class="requestWords" type="text"  placeholder="mots...." name="value" autocomplete="off">
                 </div>
             </form>
 
-            <form action="" method="post">
+            <form action="" id="featuring" method="post">
                 <div class="wordsContainer">Featuring</div>
                 <div class="inputResquest">
-                    <input class="requestWords" type="text" placeholder="mots...." name="value" autocomplete="off">
+                    <input class="requestWords" type="text"  placeholder="mots...." name="value" autocomplete="off">
                 </div>
             </form>
 
