--- a/html/PetitBac/index.html
+++ b/html/PetitBac/index.html
@@ -14,6 +14,11 @@
 <body>
     <h1 class="title-top">Petit bac</h1>
 
+    <div class="lyrics">
+        <div class="divParoles">
+           chat message🖊
+        </div>
+    </div>
 
     <div class="wrapper">
         <div class="Container">
