add reset password system

--- a/html/Login/AccountRecovery.html
+++ b/html/Login/AccountRecovery.html
@@ -16,6 +16,8 @@
             <h1>Retrouvez</h1>
             <h1>votre compte</h1>
 
+            <p style="color: rgb(255, 255, 255); text-align: center; margin-top: 5px;">❗Vérifiez vos spams❗</p>
+
             <div class="input-box">
                 <input id="recoveryCode" name="recoveryCode" type="text" placeholder="Code de récupération" required>
                 <i class='bx bxs-lock-alt' ></i>
