petit bac timer + css

--- a/html/BlindTest/index.html
+++ b/html/BlindTest/index.html
@@ -37,7 +37,7 @@
             <div class="wave"></div>
          </div>
       
-        <form action="/" method="post">
+        <form action="/BlindTestHandler" method="post">
             <div class="inputContainer">
                 <input class="myInput" type="text" name="value" placeholder="Votre réponse">
             </div> 
