--- a/html/PetitBac/LandingPage.html
+++ b/html/PetitBac/LandingPage.html
@@ -4,8 +4,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jacquard+24&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/petitBac.css">
@@ -13,7 +12,7 @@
 </head>
 
 <body>
-    <h1 class="title-top">Guess the song</h1>
+    <h1 class="title-top">Petit Bac</h1>
     
     <div class="container-block">
         <div class="audioContainer">
