--- a/html/PetitBac/index.html
+++ b/html/PetitBac/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1 class="title-top">Petit bac</h1>
+    <h1 class="title-top">Petit Bac</h1>
 
     <div class="lyrics">
         <div class="divParoles">
@@ -25,15 +25,16 @@
             <div>
                 <div class="track-art"></div>
             </div>
-            <div class="wordsContainer">Lettre aléatoire:</div>
+            <div class="LetterContainer">Lettre aléatoire:</div>
             <div class="inputResquest">
                 <div id="randomLetter">{{.RandomLetter}}</div>
             </div>
+            <p id="timeRemaining">Il reste 30 secondes</p>
 
-            <form action="/" method="post">
+            <form class="inputForm" action="/PetitBacHandler" method="post">
                 <div class="wordsContainer">Artiste</div>
                 <div class="inputResquest">
-                    <input class="requestWords" type="text" id="artiste" placeholder={{.RandomLetter}} name="artiste" autocomplete="off">
+                    <input class="requestWords" type="text" id="artiste" placeholder={{.RandomLetter}}... name="artiste" autocomplete="off">
                 </div>
                 
                 <div class="wordsContainer">Album</div>
@@ -56,11 +57,12 @@
                     <input class="requestWords" type="text" id="featuring" placeholder={{.RandomLetter}}... name="featuring" autocomplete="off">
                 </div>
                 
-                <button type="submit" class="mybtn">STOP🚨</button>
+                <button type="submit" class="mybtn">Valider</button>
             </form>
-
         </div>
     </div>
+
+    <script src="/static/js/petitBacTimer.js"></script>
 
 </body>
 
