petit bac rules button

--- a/html/PetitBac/Rules.html
+++ b/html/PetitBac/Rules.html
@@ -5,16 +5,15 @@
     <link href="/static/css/rules.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Groupie Tracker - Guess the song</title>
+    <title>Groupie Tracker - Petit Bac</title>
 </head>
 
 <body>
-        <h1 CLASS="title-top">Guess the Song 🎶</h1>
+        <h1 CLASS="title-top">Petit Bac ✏️</h1>
         <div class="container">
-                Ce jeu vous montre un extrait des paroles d'une chanson, vous devez ensuite trouver le
-                titre de la musique originale.
+                Vous avez 30 secondes pour trouver un mot pour chaque catégorie. Attention, la première lettre est imposée !
                 Bon jeu❤😍
-            <form action="/GuessTheSong" method="post">
+            <form action="/PetitBac" method="post">
                 <button class="MyBB" href="/" name="restart">Start</button>
             </form>
         </div>
