--- a/html/BlindTest/Rules.html
+++ b/html/BlindTest/Rules.html
@@ -2,14 +2,14 @@
 <html lang="fr">
 
 <head>
-    <link href="/static/css/blindTestRules.css" rel="stylesheet">
+    <link href="/static/css/rules.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Groupie Tracker - Guess the song</title>
+    <title>Groupie Tracker - Blind Test</title>
 </head>
 
 <body>
-        <h1 CLASS="title-top">Guess the Song🔈🔉🔊🎶</h1>
+        <h1 CLASS="title-top">Blind Test 🔈🔉🔊</h1>
         <div class="container">
                 Une musique se lance toutes les 15 secondes, à vous de trouver le titre de la musique à partir de l'extrait audio !
                 Bon jeu❤😍
