--- a/html/Home/UserProfile.html
+++ b/html/Home/UserProfile.html
@@ -29,7 +29,7 @@
                         <div class="tab-content">
                             <div class="tab-pane fade active show" id="account-general">
                                 <div class="card-body media align-items-center">
-                                    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnN6Y2p0dHpjZnZ5dXhiM3p0dHpwcGwxNmNyOGowNmQ0c3licWlkZCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/duf84Bx74ujSXvJs0I/giphy.webp"
+                                    <img src="/static/img/user.png"
                                         alt class="d-block ui-w-80">
                                     <div class="media-body ml-4">
                                         <label class="btn btn-outline-primary">
