--- a/html/BlindTest/LandingPage.html
+++ b/html/BlindTest/LandingPage.html
@@ -21,7 +21,7 @@
         <div class="RoomsButtons">
             <a href="/CreatePrivateBlindtest"><button class="RoomsButton">Créer un serveur privé</button></a>
             <a href="/JoinPrivateBlindtest"><button class="RoomsButton">Rejoindre un serveur privé</button></a>
-            <a href="/Blindtest"><button class="RoomsButton">Rejoindre le serveur public</button></a>
+            <a href="/PublicBlindtest"><button class="RoomsButton">Rejoindre le serveur public</button></a>
         </div>
         <a href="/BlindtestRules"><button class="RulesButton">Règles</button></a>
     </div>
